place schedule in a different page

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
 							<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 							<!-- <li class="nav-item"><a class="nav-link" href="#">Speakers</a></li> -->
-							<!-- <li class="nav-item"><a class="nav-link" href="#">Schedule</a></li> -->
+							<li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
 							<li class="nav-item"><a class="nav-link scrollto" href="#sponsors-section">Sponsors</a></li>
 
 						</ul><!--//nav-->
@@ -346,310 +346,7 @@
 		<hr>
 	</div>
 	
-	<section id="schedule-section" class="schedule-section section">
-		<div class="container">
-			<h3 class="section-heading text-center mb-5">Schedule</h3>
-			<div class="section-intro single-col-max mx-auto text-center mb-4">Time in GMT</div>
-			<!-- Nav tabs -->
-			<ul class="schedule-nav nav nav-pills nav-fill" id="myTab" role="tablist">
-				<li class="nav-item mr-2">
-					<a class="nav-link active" id="tab-1" data-toggle="tab" href="#tab-1-content" role="tab" aria-controls="tab-1-content" aria-selected="true">
-						<span class="heading">Day 1</span>
-						<span class="meta">(Fri 07, May)</span>
-					</a>
-				</li>
-				<li class="nav-item mr-2">
-					<a class="nav-link" id="tab-2" data-toggle="tab" href="#tab-2-content" role="tab" aria-controls="tab-2-content" aria-selected="false">
-						<span class="heading">Day 2</span>
-						<span class="meta">(Sat 08, May)</span>
-					</a>
-				</li>
 
-			</ul>
-			
-			<!-- Tab panes -->
-			<div class="schedule-tab-content tab-content">
-				<div class="tab-pane active" id="tab-1-content" role="tabpanel" aria-labelledby="tab-1">
-          <div class="item item-other">
-						<div class="meta">
-							<h4 class="time mb-3">09:00 - 09:10</h4>
-						</div><!--//meta-->
-						<div class="content">
-              <h3 class="title mb-3">Welcoming Session</h3>
-              <div class="location mb-3"></div>
-							<div class="desc mb-3"></div>
-						</div><!--//content-->
-					</div><!--//item-->
-          <div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">09:10 - 09:50</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">
-                  <img class="profile-image rounded-circle  mb-2" src="https://dashbit.co/images/team/JV-6c0d230edc6596281e81c03aa56cfc7b.jpg?vsn=d" alt="">
-                </a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Jose Valim</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-              <h3 class="title mb-3">Elixir v1.12 updates and Q&A</h3>
-              <div class="location mb-3"></div>
-              <div class="desc mb-3">updates on Elixir v1.12 with plenty of time for Q&A.</div>
-              <br><br>
-						</div><!--//content-->
-					</div><!--//item-->
-					<div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">10:10 - 10:40</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/John_Invictus(1).jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">John Invictus</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-              <h3 class="title mb-3">Getting started with Graphql with Absinthe</h3>
-              <div class="location mb-3"></div>
-              <div class="desc mb-3">We'll create a simple blog API powered by Graphql</div>
-              <br><br>
-						</div><!--//content-->
-          </div><!--//item-->
-					<div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">10:50 - 11:20</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Peter_Ullrich.jpeg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Peter Ullrich</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-              <h3 class="title mb-3">Architecture Patterns applied to Phoenix Projects</h3>
-              <div class="location mb-3"></div>
-              <div class="desc mb-3">Phoenix projects come with the Model-View-Controller (MVC) pattern out-of-the-box. This pattern works great for small to medium-scale projects. But how do you structure your project once it becomes complex? Architectural patterns can help you with this. I will explain how Phoenix uses the MVC pattern, explain its pros and cons, how to modularize a complex codebase into a Majestic Monolith using components, and how to make your project future-proof with the Explicit Architecture.</div>
-						</div><!--//content-->
-          </div><!--//item-->     
-					<div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">11:40 - 12:10</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/juliana_photo.jpeg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Juliana Helena</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-              <h3 class="title mb-3">PubSub in Liveview</h3>
-              <div class="location mb-3"></div>
-              <div class="desc mb-3"></div>
-              <br><br>
-						</div><!--//content-->
-					</div><!--//item-->                      
-					<div class="item item-other">
-						<div class="meta">
-							<h4 class="time mb-3">12:10 - 12:40</h4>
-						</div><!--//meta-->
-						<div class="content">
-              <h3 class="title mb-3">Coffee Break</h3>
-              <div class="location mb-3"></div>
-							<div class="desc mb-3"></div>
-						</div><!--//content-->
-					</div><!--//item-->
-					<div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">12:50 - 13:20</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Tymon_Tobolski.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Tymon Tobolski</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-							<h3 class="title mb-3">Only possible with Elixir - Ubots Case Study</h3>
-							<div class="location mb-3"></div>
-              <div class="desc mb-3">
-                How to build four successful products with a tiny team of two working part-time after-hours? The answer is: Elixir.
-                <br>
-                We will share:
-                <ul>
-                 <li>What are Slack Bots and why you should care</li>
-                 <li>How we decided on our architecture and what were the consequences</li>
-                 <li>How we've build a new framework using old ideas</li>
-                 <li>How we've built an end-to-end testing framework for complex interactions</li>
-                </ul>
-              </div>
-      
-						</div><!--//content-->
-					</div><!--//item-->
-					<div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">13:30 - 14:30</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/jackie.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Jackie Kaunda</a></div>
-              </div><!--//profile-->
-							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/linda-otieno.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Linda Achieng</a></div>
-							</div><!--//profile-->              
-						</div><!--//meta-->
-						<div class="content">
-							<h3 class="title mb-3">Building a simple billing system using Genservers </h3>
-							<div class="location mb-3"></div>
-              <div class="desc mb-3">
-                This talk is about one of our ongoing project which allows us to pay some of our bills automatically at the end of each month.
-              </div>
-              <br><br><br><br><br><br>
-						</div><!--//content-->
-					</div><!--//item-->
-					<div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">14:40 - 15:10</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="#" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Elixir Outlaws</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-							<h3 class="title mb-3">Live Podcast by Elixir Outlaws</h3>
-							<div class="location mb-3"></div>
-              <div class="desc mb-3"></div>
-              <br><br>
-						</div><!--//content-->
-					</div><!--//item-->
-					<div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">15:30 - 16:10</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Francesco_Cesarini.jpeg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Francesco Cesarini</a></div>
-              </div><!--//profile-->
-							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Simon_Thompson_adobespark.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Simon Thompson</a></div>
-							</div><!--//profile-->              
-						</div><!--//meta-->
-						<div class="content">
-							<h3 class="title mb-3">Industry versus academia? Learning and teaching programming</h3>
-							<div class="location mb-3"></div>
-              <div class="desc mb-3">In our talk we’ll explore this hypothesis: in industry, you are learning a technology you will use to develop software, whereas in an academic setting, you are there to learn how to learn. Based on our experience of travelling in opposite directions: Francesco from industry to academia, and Simon from a theoretical to a more pragmatic approach, we’ll test the hypothesis, and, through evidence and anecdotes, show that in fact it is more complicated and diverse than we had first imagined.</div>	
-              <br><br><br><br>			
-            </div><!--//content-->
-					</div><!--//item-->
-          <div class="item item-other">
-            <div class="meta">
-              <h4 class="time mb-3">16:10 - 16:20</h4>
-            </div><!--//meta-->
-            <div class="content">
-              <h3 class="title mb-3">Closing Remarks</h3>
-              <div class="location mb-3"></div>
-              <div class="desc"></div>
-            </div><!--//content-->
-          </div><!--//item-->					
-				</div><!--//tab-1-content-->
-				<div class="tab-pane" id="tab-2-content" role="tabpanel" aria-labelledby="tab-2">
-          <div class="item item-other">
-						<div class="meta">
-							<h4 class="time mb-3">10:00 - 10:10</h4>
-						</div><!--//meta-->
-						<div class="content">
-              <h3 class="title mb-3">Welcoming Session</h3>
-              <div class="location mb-3"></div>
-							<div class="desc"></div>
-						</div><!--//content-->
-					</div><!--//item-->
-          <div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">10:20 - 10:50</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Jeffrey_Matthias.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Jeffrey Matthias</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-              <h3 class="title mb-3">Effective Elixir Testing Coverage</h3>
-              <div class="location mb-3"></div>
-              <div class="desc">Your code base has tests, but are you safe to refactor? This talk isn't about getting to a test coverage number, but about how to design ExUnit tests to cover your code's behavior from responses to side effects. We will touch on test theory, using test doubles, and demonstrate some ways to test asynchronous code.</div>
-              <br>
-						</div><!--//content-->
-          </div><!--//item-->
-          <div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">11:00 - 12:30</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Imo_Inyang.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Imo Yang</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-              <h3 class="title mb-3">Putting it together - Elixir + gRPC</h3>
-              <div class="location mb-3"></div>
-              <div class="desc">Talk's summary goes here.</div>
-              <br><br>
-						</div><!--//content-->
-          </div><!--//item-->      
-          <div class="item item-other">
-						<div class="meta">
-							<h4 class="time mb-3">12:30 - 13:00</h4>
-						</div><!--//meta-->
-						<div class="content">
-              <h3 class="title mb-3">Coffee Break</h3>
-              <div class="location mb-3"></div>
-							<div class="desc"></div>
-						</div><!--//content-->
-          </div><!--//item-->      
-          <div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">13:00 - 14:30</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Nikola_Begedin(1).jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Nikola Begedin</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-              <h3 class="title mb-3">Actual E2E Testing with Cypress, Vue and Elixir/Phoenix, using Ecto sandbox</h3>
-              <div class="location mb-3"></div>
-              <div class="desc">
-                Test suites are often called E2E, even when, due to valid reasons, we have to mock out important parts of our setup, such as the database, or even a backend API. With Elixir as backend, it's possible to use and expose the Ecto sandbox to make writing proper, isolated E2E tests, each having their own data setup, a breeze.
-              </div>
-              <br><br><br>
-						</div><!--//content-->
-          </div><!--//item-->                        
-
-          <div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">15:00 - 15:30</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/bruce-brown-black.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Bruce Tate</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-              <h3 class="title mb-3">Exploring Practices of Growth and Decline</h3>
-              <div class="location mb-3"></div>
-              <div class="desc">Software development is a wonderfully conflicted mix of art and science. This keynote will examine leverage. Specifically, we'll dive into practices, processes and code organization that lead to compounded growth, or decay, of development organizations.</div>
-              <br><br><br>
-						</div><!--//content-->
-          </div><!--//item-->      
-          <div class="item item-other">
-            <div class="meta">
-              <h4 class="time mb-3">15:30 - 15:40</h4>
-            </div><!--//meta-->
-            <div class="content">
-              <h3 class="title mb-3">Closing Remarks</h3>
-              <div class="location mb-3"></div>
-              <div class="desc"></div>
-            </div><!--//content-->
-          </div><!--//item-->
-          <div class="item item-other">
-						<div class="meta">
-							<h4 class="time mb-3">15:40 - 16:40</h4>
-						</div><!--//meta-->
-						<div class="content">
-							<h3 class="title mb-3">Dinner &amp; After-party</h3>
-							<div class="desc">Bring your food and drinks</div>
-						</div><!--//content-->
-					</div><!--//item-->                                     
-        </div><!--//tab-2-content-->
-			</div><!--//schedule-tab-content-->
-		</div><!--//container-->
-	</section><!--//schedule-section-->
-  
 	<section id="sponsors-section" class="sponsors-section section">
 		<div class="container">
 			<h3 class="section-heading text-center mb-3">Sponsors</h3>
