link speakers to schedule

--- a/speakers.html
+++ b/speakers.html
@@ -87,7 +87,7 @@
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
             <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
-<!--            <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>-->
+            <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
             <li class="nav-item"><a class="nav-link scrollto" href="/#sponsors-section">Sponsors</a></li>
           </ul><!--//nav-->
         </div><!--//navabr-collapse-->
@@ -167,7 +167,7 @@
       <!--//col-->
       <div class="col-lg-3 mb-4 mt-5">
         <div class="card rounded-0">
-          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/organisers/wayua.jpg" class="card-img-top rounded-0" alt="logo" height = 250px ></a>
+          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/jackie.jpg" class="card-img-top rounded-0" alt="logo" height = 250px ></a>
           <div class="card-body">
             <h5 class="card-title mb-2"> Jackline Kaunda</h5>
             <div class="card-text mb-3">
