show link to all speakers

--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
       </div><!--//col-->
     </div>
   </div>
-	<!-- <div class="speakers-cta text-center py-3"><a class="btn btn-primary btn-lg" href="speakers.html" target="_blank">All Speakers</a></div> -->
+  
+	<div class="speakers-cta text-center py-3"><a class="btn btn-primary btn-lg" href="speakers.html" target="_blank">All Speakers</a></div>
 
 </section>
 
