fix:  changes to a speaker's bio

--- a/speakers.html
+++ b/speakers.html
@@ -226,7 +226,6 @@
             <h5 class="card-title mb-2">Imo Inyang</h5>
             <div class="card-text mb-3">
               <div class="meta"> Elixir Software Developer</div>
-              <!-- <div class="meta"> Founder of Ubots</div> -->
             </div><!--//card-text-->
           <a href="#collapseImo" data-toggle="collapse" data-target="#collapseImo" aria-expanded="false" aria-controls="collapseImo">Read more &rarr;</a>
           </div>
@@ -306,7 +305,7 @@
           <div class="card-body">
             <h5 class="card-title mb-2">Tymon Tobolski</h5>
             <div class="card-text mb-3">
-              <div class="meta"> Elixir Developer Slack</div>
+              <div class="meta"> Elixir Developer</div>
               <div class="meta"> Founder of Ubots</div>
             </div><!--//card-text-->
           <a href="#collapseTymon" data-toggle="collapse" data-target="#collapseTymon" aria-expanded="false" aria-controls="collapseTymon">Read more &rarr;</a>
