fix: update speaker's info

--- a/speakers.html
+++ b/speakers.html
@@ -199,14 +199,15 @@
           <div class="card-body">
             <h5 class="card-title mb-2">Jeffrey Mathias</h5>
             <div class="card-text mb-3">
-              <div class="meta">Staff Engineer at Community.com</div>
+              <div class="meta">Staff Engineer</div>
+              <div class="meta">Community.com</div>
               <div class="meta">Co-author of Testing Elixir</div>
             </div><!--//card-text-->
           <a href="#collapseJeff" data-toggle="collapse" data-target="#collapseJeff" aria-expanded="false" aria-controls="collapseJeff">Read more &rarr;</a>
           <div class="collapse" id="collapseJeff">
             <div class="card card-body">
               <h5>Bio</h5>
-              <p>Co-author of Testing Elixir. Staff Engineer at Community.com. I like to create thing and to support others doing so. </p>
+              <p>Co-author of Testing Elixir. Staff Engineer at Community.com. I like to create things and to support others doing so. </p>
             </div>
           </div><!--//card-->
         </div>
