update speaker bio

--- a/speakers.html
+++ b/speakers.html
@@ -117,14 +117,13 @@
             <h5 class="card-title mb-2">John Invictus</h5>
             <div class="card-text mb-3">
               <div class="meta"> Elixir Software Developer</div>
-              <div class="meta"> Postagraph</div>
             </div><!--//card-text-->
         <a href="#collapseJohn" data-toggle="collapse" data-target="#collapseJohn" aria-expanded="false" aria-controls="collapseJohn">Read more &rarr;</a>
           
           <div class="collapse" id="collapseJohn">
             <div class="card card-body">
               <h5>Bio</h5>
-              <p>I am an Elixir developer at Postagraph who loves to explore every aspect of Elixir Language</p>
+              <p>I am an Elixir developer who loves to explore every aspect of Elixir Language</p>
             </div>
           </div><!--//card-->
         </div>
