--- a/index.html
+++ b/index.html
@@ -355,6 +355,9 @@
 				<a href="https://binarynoggin.com" target="_blank" rel="noopener" class="logo-item col-6 col-md-4 col-lg-4"><img src="assets/images/logos/BN-blog-logo.png" alt="logos"></a>
 
 			</div><!--//row-->
+			<div class="row logos justify-content-center">
+				<a href="https://qhala.com" target="_blank" rel="noopener" class="logo-item col-6 col-md-4 col-lg-4"><img src="assets/images/logos/qhala.png" alt="logos"></a>
+			</div><!--//row-->
 			<div class="section-intro text-center single-col-max mx-auto mb-3">
 			</div>
 			<div class="section-intro text-center single-col-max mx-auto mb-2" style="color: #4f5252;">
