add getty to list of speakers

--- a/speakers.html
+++ b/speakers.html
@@ -339,6 +339,27 @@
       </div>
       <div class="col-lg-3 mb-4 mt-5">
         <div class="card rounded-0">
+          <a href="#modal-speaker-getty-orawo" data-toggle="modal" data-target="#modal-speaker-getty-orawo"><img src="assets/images/speakers/getty-orawo.png" class="card-img-top rounded-0" alt="logo" height = 250px ></a>
+          <div class="card-body">
+            <h5 class="card-title mb-2"> Getty Orawo</h5>
+            <div class="card-text mb-3">
+              <div class="meta">Software Developer</div>
+            </div><!--//card-text-->
+          <a href="#modal-speaker-getty-orawo" data-toggle="modal" data-target="#modal-speaker-getty-orawo" aria-expanded="false" aria-controls="gettyModal">Read more &rarr;</a>
+         
+
+          </div><!--//card-->
+          <div class="card-footer text-muted">
+            <ul class="social-list list-inline mb-0">
+              <li class="list-inline-item"><a target="_blank" href="https://twitter.com/gettyorawo"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+             <li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li>
+            </ul><!--//social-list-->
+          </div>
+        </div><!--//card-->
+      </div>
+      <div class="col-lg-3 mb-4 mt-5">
+        <div class="card rounded-0">
           <a href="#modal-speaker-tymon-tobolski" data-toggle="modal" data-target="#modal-speaker-tymon-tobolski"><img src="assets/images/speakers/Tymon_Tobolski.jpg" class="card-img-top rounded-0" alt="logo" height= 222></a>
           <div class="card-body">
             <h5 class="card-title mb-2">Tymon Tobolski</h5>
@@ -720,6 +741,43 @@
           <p class="mb-0">
             Jeffry will be giving a talk titled: <strong>Effective Elixir Testing Coverage
             </strong> 
+          </p>
+        </div>
+      </div><!--//modal-body-->
+    </div><!--//modal-content-->
+  </div><!--//modal-dialog-->
+</div><!--//modal-->
+
+<!-- Modal Speaker Getty Orawo -->
+<div class="modal modal-speaker modal-speaker-1" id="modal-speaker-getty-orawo" tabindex="-1" role="dialog" aria-labelledby="speaker-1-ModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 id="speaker-1-ModalLabel" class="modal-title sr-only">Getty Orawo</h4>
+      </div>
+      <div class="modal-body p-0">
+        <div class="media flex-column flex-md-row theme-bg-light p-4 p-lg-5">
+          <img class="profile-image mb-3 mb-md-0 mr-md-4 rounded-circle mx-auto" src="assets/images/speakers/getty-orawo.png" alt="logo" />
+
+          <div class="media-body text-center text-md-left mx-auto">
+            <h2 class="name mb-2">Getty Orawo</h2>
+            <div class="meta">Software Developer</div>
+            <div class="meta mb-2"><a href=""></a></div>
+            <ul class="social-list list-inline mb-0">
+              <li class="list-inline-item"><a  href="https://twitter.com/gettyorawo"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href=""><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href=""><i class="fab fa-github fa-fw"></i></a></li>
+            </ul><!--//social-list-->
+          </div><!--//media-body-->
+        </div><!--//media-->
+
+        <div class="desc p-4 p-lg-5">
+          <p>
+           Founder GirlsGetGeeky
+          </p>
+          <p class="mb-0">
+            Getty will be giving a lightning talk titled: <strong>Exodus to Elixir (stateless transition)</strong>
           </p>
         </div>
       </div><!--//modal-body-->
