--- a/index.html
+++ b/index.html
@@ -366,6 +366,25 @@
 			<a href="https://binarynoggin.com" target="_blank" rel="noopener" class="logo-item col-6 col-md-4 col-lg-4"><img
 					src="assets/images/logos/smv-logo-wordmark-rgb.png" alt="smartvorkat logo"></a>		
 		</div>
+		<div class="section-intro text-center" style="color: #4f5252;">
+			<strong>Conference Supporter Sponsors</strong>
+		</div>
+	
+	<div class="row logos justify-content-center">
+		<a href="https://dockyard.com" target="_blank" rel="noopener" class="logo-item col-6 col-md-4 col-lg-4"><img
+				src="assets/images/logos/dockyard.png" alt="dockyard logo"></a>
+		
+	</div>
+
+	<div class="section-intro text-center" style="color: #4f5252;">
+		<strong>Signature Sponsor Sponsors</strong>	
+	</div>
+	<div class="row logos justify-content-center">
+		<a href="https://qhala.com" target="_blank" rel="noopener" class="logo-item col-6 col-md-4 col-lg-4"><img
+			src="assets/images/logos/logo-remote.png" alt="remote logo"></a>	
+	</div>
+	
+		
 
 			<div class="section-intro text-center single-col-max mx-auto mb-3">
 			</div>
